nixidy/generated/prod/sure/Deployment-sure-sure-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: sure-worker
    app.kubernetes.io/instance: sure
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sure
  name: sure-sure-worker
  namespace: finance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: sure-worker
      app.kubernetes.io/instance: sure
      app.kubernetes.io/name: sure
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 62ac96aeb0c2a9929caff6cf80b667165a8b44458c377daaac3b4cebaad14567
      labels:
        app.kubernetes.io/controller: sure-worker
        app.kubernetes.io/instance: sure
        app.kubernetes.io/name: sure
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - bundle
            - exec
            - sidekiq
          image: ghcr.io/we-promise/sure:stable@sha256:665adde4e60f1695936f880185f6bd4abd30b53866244edc132bfaff9d5bbde8
          name: sure-worker
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: sure
