nixidy/generated/prod/sure/Deployment-sure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: sure
    app.kubernetes.io/instance: sure
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sure
  name: sure
  namespace: finance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: sure
      app.kubernetes.io/instance: sure
      app.kubernetes.io/name: sure
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: a13a3a1270a36c3bc798578118afd641ed626ded1eb9d70bb2194972f7e35258
      labels:
        app.kubernetes.io/controller: sure
        app.kubernetes.io/instance: sure
        app.kubernetes.io/name: sure
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - configMapRef:
                name: sure
            - secretRef:
                name: sure
          image: ghcr.io/we-promise/sure:stable@sha256:665adde4e60f1695936f880185f6bd4abd30b53866244edc132bfaff9d5bbde8
          livenessProbe:
            httpGet:
              path: /up
              port: http
          name: sure
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /up
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /rails/storage
              name: storage
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: sure
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: sure
