nixidy/generated/prod/sure/Service-sure.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sure
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sure
    app.kubernetes.io/service: sure
  name: sure
  namespace: finance
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: sure
    app.kubernetes.io/instance: sure
    app.kubernetes.io/name: sure
  type: ClusterIP
