nixidy/generated/prod/sure/HTTPRoute-sure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: sure
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sure
  name: sure
  namespace: finance
spec:
  hostnames:
    - sure.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sure
          namespace: finance
          port: 3000
          weight: 1
